# RUST-AUTH-PROJECT

./: .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  Cargo.toml  PROMPT_HISTORY.md  README.md  VALIDATION.md  docker-compose.yml
examples/: clear_tasks.rs
src/: applications.rs  compute.rs  config.rs  errors.rs  jwt.rs  main.rs  models.rs  queries.rs  request_validations.rs  routes.rs  security.rs  state.rs  traits.rs  utils.rs  web_server.rs
src/applications/: application_store.rs  connect_mongo.rs  connect_redis.rs
src/compute/: auth.rs  authorization.rs  tasks.rs
src/compute/auth/: login.rs  seed_users.rs  verify_2fa.rs
src/compute/tasks/: assign_tasks.rs  create_task.rs  view_my_tasks.rs
src/models/: auth.rs  dtos.rs  session.rs  task.rs  user.rs
src/queries/: auth.rs  tasks.rs  users.rs
src/request_validations/: auth.rs  common.rs  tasks.rs
src/utils/: cache.rs  constants.rs  jwt.rs  security.rs
src/web_server/: auth.rs  create_connections.rs  health_check.rs  middlewares.rs  tasks.rs
src/web_server/auth/: dev_email_logs.rs  login.rs  seed_users.rs  verify_2fa.rs
src/web_server/middlewares/: rate_limit.rs  session.rs
src/web_server/tasks/: assign_tasks.rs  create_task.rs  view_my_tasks.rs
tests/: e2e_validation_flow.rs
